--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             referralBonus: 5.00,
             adReward: 2.00,
             dailyAdLimit: 10,
-            botUsername: "PromptHub1_Bot", // Updated Bot Name
+            botUsername: "Apple_Earn_Incomebd_bot", // Updated Bot Name
             adZoneId: "10312256", 
             tasks: [],
             // New Support Links Array
