--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             referralBonus: 5.00,
             adReward: 2.00,
             dailyAdLimit: 10,
-            botUsername: "PromptHub1_Bot",
+            botUsername: "Apple_Earn_Incomebd_bot",
             adZoneId: "10312256", 
             // New Structure for Withdraw Rules
             withdrawRules: {
@@ -541,10 +541,10 @@
             },
             tasks: [],
             supportLinks: [
-                { title: 'সাপোর্ট গ্রুপ', url: 'https://t.me/YourSupport', icon: 'fab fa-telegram-plane', color: '#0088cc' },
-                { title: 'চ্যানেল', url: 'https://t.me/YourChannel', icon: 'fas fa-bullhorn', color: '#FF9F0A' },
-                { title: 'প্রাইভেসি পলিসি', url: 'https://google.com', icon: 'fas fa-shield-alt', color: '#30D158' },
-                { title: 'অ্যাডমিন', url: 'https://t.me/YourAdmin', icon: 'fas fa-user-shield', color: '#FF3B30' }
+                { title: 'সাপোর্ট গ্রুপ', url: 'https://t.me/+W9u5nbxRn7lmMmY1', icon: 'fab fa-telegram-plane', color: '#0088cc' },
+                { title: 'চ্যানেল', url: 'https://t.me/APPLEEARN_OFFICIALCHANNEL', icon: 'fas fa-bullhorn', color: '#FF9F0A' },
+                { title: 'প্রাইভেসি পলিসি', url: 'https://t.me/Apple_income_help', icon: 'fas fa-shield-alt', color: '#30D158' },
+                { title: 'অ্যাডমিন', url: 'https://t.me/Apple_income_help', icon: 'fas fa-user-shield', color: '#FF3B30' }
             ]
         };
 
